# spreadsheet-mcp

./: .gitignore  .mcp.json  README.md  check_setup.py  pyproject.toml  test_all_tools.py  test_with_existing.py
.github/workflows/: ci.yml
credentials/: .gitkeep
src/spreadsheet_mcp/: __init__.py  auth.py  server.py  sheets_client.py
